[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tzdata"
version = "0.3.0"
description = "Unified market data download and management for Chinese futures/options markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.26.0",
    "tushare>=1.4.0",
    "selenium>=4.15.0",
    "Pillow>=10.0.0",
    "chardet>=5.2.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
    "akshare>=1.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
tzdata = "tzdata_pkg.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
